--- a/firethelaser2/app/src/main/res/layout/activity_main.xml
+++ b/firethelaser2/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -56,3 +60,4 @@
 
 
 </LinearLayout>
+</RelativeLayout>
