--- a/www/node_mouse/electron_test/style.css
+++ b/www/node_mouse/electron_test/style.css
@@ -100,3 +100,16 @@ sup  { font-size: 36px; font-weight: 100; line-height: 55px; }
     border-radius: 50%;
 }
 
+#circle2 {
+    background: #2ecc71;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+
+#circle3 {
+    background: #8e44ad;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
