--- a/firethelaser2/app/src/main/res/layout/activity_main.xml
+++ b/firethelaser2/app/src/main/res/layout/activity_main.xml
@@ -7,49 +7,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="50dp"
+    android:gravity="center"
     tools:context=".MainActivity">
-
-    <WebView
-        android:layout_width="fill_parent"
-        android:layout_height="400dp"
-        android:id="@+id/ppt"></WebView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp">
 
         <Button
             android:id="@+id/next"
             android:text="@string/next"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
+            android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
             android:layout_gravity="center_horizontal"/>
+
 
         <Button
-            android:id="@+id/prev"
-            android:text="@string/previous"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp"
-            android:layout_gravity="center_horizontal"/>
-
-        <ToggleButton
             android:id="@+id/toggle"
             android:text="@string/toggle"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
@@ -58,6 +35,4 @@
             android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
-
-</LinearLayout>
 </RelativeLayout>
